tests/samples/valid/local_variable_types.pn

fn foo()
{
	var x: bool = true;
}


fn main()
{
	var x: i32 = 100;
}
