tests/samples/invalid/ambiguous_naked_integer_too_big.pn
fn main()
{
	var x = 256 as u8;
}
